admin/src/components/routes/ActionWrapper/Action.css
/* ... */
.action .fullscreenTransformation .property .requiredIcon {
    color: var(--sl-color-danger-500);
    font-size: 9px;
    margin-right: 5px;
}

.action .fullscreenTransformation .property .name {
    font-family: monospace;
    width: fit-content;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    gap: 3px;
}

.action .fullscreenTransformation .property .name .label {
    margin-left: 3px;
    font-size: 13px;
    opacity: .7;
    font-family: monospace;
}

.action .fullscreenTransformation .property .type {
    opacity: .7;
    font-size: 13px;
    font-family: monospace;
}

.action .fullscreenTransformation .property sl-icon {
    cursor: pointer;
    transition: transform .3s;
    color: var(--sl-color-neutral-400);
    font-size: 13px;
}

.action .fullscreenTransformation .property.expand > .parentProperty > sl-icon {
    transform: rotate(90deg)
}

.action .fullscreenTransformation .property .parentProperty {
    display: flex;
    align-items: center;
    gap: 8px;
}

.action .fullscreenTransformation .property .parentProperty > .property {
    padding: 0;
    width: 100%;
}

.action .fullscreenTransformation .property .subProperties .property {
    border: 0;
    padding: 10px 20px 5px 45px;
}

.action .fullscreenTransformation .property .copyProperty {
    position: relative;
    left: 2px;
    color: var(--sl-color-neutral-500);
    font-size: 14px;
}

.action .fullscreenTransformation .property .copyProperty::part(copy-icon),
.action .fullscreenTransformation .property.expand:hover > .parentProperty > .property > .name > .copyProperty::part(copy-icon) {
    visibility: hidden;
}

.action .fullscreenTransformation .property:hover > .name > .copyProperty::part(copy-icon) {
    visibility: visible!important;
}

.action .fullscreenTransformation .property:hover > .parentProperty > .property > .name > .copyProperty::part(copy-icon)
.action .fullscreenTransformation .property > .parentProperty:hover > .property > .name > .copyProperty::part(copy-icon) {
    visibility: visible;
}

.action .fullscreenTransformation .leftPanel {
    position: relative;
    max-height: 100%;
    overflow: auto;
}

.action .fullscreenTransformation .inputPanel,
.action .fullscreenTransformation .outputPanel {
    max-height: 100%;
    overflow: hidden;
}

.action .fullscreenTransformation .inputPanel .panelContent,
.action .fullscreenTransformation .outputPanel .panelContent {
    height: 100%;
    overflow: scroll;
}

.action .fullscreenTransformation .inputPanel .samples .sampleWrapper::part(base) {
    border: 0!important;
    border-radius: 0!important;
}

.action .fullscreenTransformation .inputPanel .samples .sampleWrapper::part(header) {
    padding: 0;
}

.action .fullscreenTransformation .inputPanel .samples .sampleWrapper::part(summary-icon) {
    display: none;
}

.action .fullscreenTransformation .inputPanel .samples .sample {
    padding: 15px 20px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    transition: background-color 500ms;
    width: 100%;
    user-select: none;
}

.action .fullscreenTransformation .inputPanel .samples .sample .sampleName {
    display: flex;
    align-items: start;
    gap: 15px;
}

.action .fullscreenTransformation .inputPanel .samples .sample .sampleID {
    font-size: 13px;
    font-weight: 600;
    position: relative;
    top: 2px;
}

.action .fullscreenTransformation .inputPanel .samples .sample .sampleEmail {
    font-size: 13px;
    opacity: .7;
}

.action .fullscreenTransformation .inputPanel .samples .sample .executeButton {
    visibility: hidden;
}

.action .fullscreenTransformation .inputPanel .samples .sample.lastExecuted .executeButton,
.action .fullscreenTransformation .inputPanel .samples .sample:hover .executeButton {
    visibility: visible;
}


.action .fullscreenTransformation .inputPanel .samples .sample .executeButton sl-icon-button {
    font-size: 21px;
    color: var(--sl-color-primary-700);
}

.action .fullscreenTransformation .inputPanel .samples .sample.lastExecuted,
.action .fullscreenTransformation .inputPanel .samples .sample:hover {
    background-color: var(--sl-color-primary-50);
    color: var(--sl-color-primary-950)
}

.action .fullscreenTransformation .inputPanel .samples .sample.lastExecuted .sampleFullName,
.action .fullscreenTransformation .inputPanel .samples .sample:hover .sampleFullName,
.action .fullscreenTransformation .inputPanel .samples .sample.lastExecuted .sampleID,
.action .fullscreenTransformation .inputPanel .samples .sample:hover .sampleID,
.action .fullscreenTransformation .inputPanel .samples .sample.lastExecuted .sampleEmail,
.action .fullscreenTransformation .inputPanel .samples .sample:hover .sampleEmail {
    color: var(--sl-color-primary-950);
}

.action .fullscreenTransformation .inputPanel .samples .sampleSource {
    padding: 20px;
}

.action .fullscreenTransformation .inputPanel .noSample,
.action .fullscreenTransformation .inputPanel .queryExecution {
    color: var(--sl-color-neutral-200);
    padding: 20px;
    text-align: center;
}

.action .fullscreenTransformation .inputPanel .noSample sl-icon,
.action .fullscreenTransformation .inputPanel .queryExecution sl-icon {
    font-size: 40px;
    color: var(--sl-color-neutral-400);
}

.action .fullscreenTransformation .inputPanel .noSample .noSampleText,
.action .fullscreenTransformation .inputPanel .queryExecution .queryExecutionText {
    display: block;
    max-width: 280px;
    margin: 10px auto 0 auto;
    color: var(--sl-color-neutral-500);
}

.action .fullscreenTransformation .inputPanel .eventListener .body {
    margin-top: 0;
}

.action .fullscreenTransformation .inputPanel .queryExecution .queryExecutionButton {
    margin-top: 15px;
}

.action .fullscreenTransformation .inputPanel .eventListener .eventList {
    min-height: 100%;
}
/* ... */

